--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(data_encoding_p01)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp Node.h NTree.h Probable.h)
+set(SOURCE_FILES main.cpp Node.h NTree.h Probable.h HuffmanCoding.h)
 add_executable(data_encoding_p01 ${SOURCE_FILES})
